--- a/public/accessibilite.html
+++ b/public/accessibilite.html
@@ -12,7 +12,7 @@
 <p>
 	Cette déclaration d’accessibilité s’applique à
 	<strong>Mon Inclusion Numérique</strong><span>
-	(<span>https://mon.inclusion-numerique.anct.gouv.fr/</span>)</span>.
+	(<a href="https://mon.inclusion-numerique.anct.gouv.fr/">https://mon.inclusion-numerique.anct.gouv.fr/</a>)</span>.
 </p>
 <h2>État de conformité</h2>
 <p>
