--- a/public/accessibilite.html
+++ b/public/accessibilite.html
@@ -1,71 +1,113 @@
 <!DOCTYPE html>
-<h1>Déclaration d’accessibilité</h1>
-<p>
-	Établie le
-	<span>18 juin 2025</span>.
-</p>
-<p>
-	<span>ANCT - Agence Nationale de la Cohésion des Territoires</span>
-	s’engage à rendre son service accessible, conformément à
-	l’article 47 de la loi n° 2005-102 du 11 février 2005.
-</p>
-<p>
-	Cette déclaration d’accessibilité s’applique à
-	<strong>Mon Inclusion Numérique</strong><span>
-	(<a href="https://mon.inclusion-numerique.anct.gouv.fr/">https://mon.inclusion-numerique.anct.gouv.fr/</a>)</span>.
-</p>
-<h2>État de conformité</h2>
-<p>
-	<strong>Mon Inclusion Numérique</strong>
-	est
-	<strong><span data-printfilter="lowercase">non conforme</span></strong>
-	avec le
-	<abbr title="Référentiel général d’amélioration de l’accessibilité">RGAA</abbr>. <span>Le site n’a encore pas été audité.<br></span>
-</p>
-<h2>Amélioration et contact</h2>
-<p>
-	Si vous n’arrivez pas à accéder à un contenu ou à un service,
-	vous pouvez contacter le responsable de
-	<span>Mon Inclusion Numérique</span>
-	pour être orienté vers une alternative accessible ou obtenir le
-	contenu sous une autre forme.
-</p>
-<ul class="basic-information feedback h-card">
-	<li>
-	E-mail&nbsp;:
-	<a href="mailto:societe.numerique@anct.gouv.fr">societe.numerique@anct.gouv.fr</a>
-</li>
+<html lang="fr" data-fr-scheme="light" dir="ltr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Déclaration d'accessibilité - Mon Inclusion Numérique</title>
+  <link rel="stylesheet" href="https://unpkg.com/@gouvfr/dsfr@1.13.1/dist/dsfr.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/@gouvfr/dsfr@1.13.1/dist/utility/utility.css">
+  <link rel="stylesheet" href="https://unpkg.com/@gouvfr/dsfr@1.13.1/dist/utility/icons/icons.css">
+  <style>
+    article {
+      border-top: 4px solid var(--blue-france-sun-113-625);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+  </style>
+</head>
+<body class="fr-background-default--grey">
+  <div class="fr-container fr-py-6w">
+    <div class="fr-grid-row fr-grid-row--center">
+      <article aria-labelledby="declaration-accessibilite-title" class="fr-col-12 fr-col-lg-10 fr-background-default--white fr-p-6w">
+        <h1 id="declaration-accessibilite-title" class="fr-h2 fr-mb-4w" style="color: var(--blue-france-sun-113-625);">Déclaration d'accessibilité</h1>
 
-</ul>
-<h2>Voie de recours</h2>
-<p>
-	Cette procédure est à utiliser dans le cas suivant&nbsp;: vous avez
-	signalé au responsable du site internet un défaut
-	d’accessibilité qui vous empêche d’accéder à un contenu ou à un
-	des services du portail et vous n’avez pas obtenu de réponse
-	satisfaisante.
-</p>
-<p>Vous pouvez&nbsp;:</p>
-<ul>
-	<li>
-	Écrire un message au
-	<a href="https://formulaire.defenseurdesdroits.fr/">Défenseur des droits</a>
-</li>
-	<li>
-	Contacter
-	<a href="https://www.defenseurdesdroits.fr/saisir/delegues">le délégué du Défenseur des droits dans votre région</a>
-</li>
-	<li>
-	Envoyer un courrier par la poste (gratuit, ne pas mettre de
-	timbre)&nbsp;:<br>
-	Défenseur des droits<br>
-	Libre réponse 71120 75342 Paris CEDEX 07
-</li>
-</ul>
-<hr>
-<p>
-	Cette déclaration d’accessibilité a été créé le
-	<span>18 juin 2025</span>
-	grâce au
-	<a href="https://betagouv.github.io/a11y-generateur-declaration/#create">Générateur de Déclaration d’Accessibilité</a>.
-</p>
+        <p>
+          Établie le <span>18 juin 2025</span>.
+        </p>
+
+        <p>
+          <span>ANCT - Agence Nationale de la Cohésion des Territoires</span>
+          s'engage à rendre son service accessible, conformément à
+          l'article 47 de la loi n° 2005-102 du 11 février 2005.
+        </p>
+
+        <p>
+          Cette déclaration d'accessibilité s'applique à
+          <strong>Mon Inclusion Numérique</strong>
+          <span>
+            (<a href="https://mon.inclusion-numerique.anct.gouv.fr/" class="fr-link">https://mon.inclusion-numerique.anct.gouv.fr/</a>)</span>.
+        </p>
+
+        <section aria-labelledby="etat-conformite-title" class="fr-mb-4w">
+          <div class="fr-callout fr-callout--brown-caramel">
+            <h2 id="etat-conformite-title" class="fr-h6 fr-callout__title">État de conformité</h2>
+            <p class="fr-callout__text">
+              <strong>Mon Inclusion Numérique</strong>
+              est
+              <strong><span data-printfilter="lowercase">non conforme</span></strong>
+              avec le
+              <abbr title="Référentiel général d'amélioration de l'accessibilité">RGAA</abbr>.
+              <span>Le site n'a encore pas été audité.</span>
+            </p>
+          </div>
+        </section>
+
+        <section aria-labelledby="amelioration-contact-title" class="fr-mb-4w">
+          <h2 id="amelioration-contact-title" class="fr-h6">Amélioration et contact</h2>
+          <p>
+            Si vous n'arrivez pas à accéder à un contenu ou à un service,
+            vous pouvez contacter le responsable de
+            <span>Mon Inclusion Numérique</span>
+            pour être orienté vers une alternative accessible ou obtenir le
+            contenu sous une autre forme.
+          </p>
+          <div class="fr-highlight fr-mb-3w">
+            <p class="fr-mb-0">
+              <strong>E-mail&nbsp;:</strong>
+              <a href="mailto:societe.numerique@anct.gouv.fr" class="fr-link">societe.numerique@anct.gouv.fr</a>
+            </p>
+          </div>
+        </section>
+
+        <section aria-labelledby="voie-recours-title" class="fr-mb-4w">
+          <h2 id="voie-recours-title" class="fr-h6">Voie de recours</h2>
+          <p>
+            Cette procédure est à utiliser dans le cas suivant&nbsp;: vous avez
+            signalé au responsable du site internet un défaut
+            d'accessibilité qui vous empêche d'accéder à un contenu ou à un
+            des services du portail et vous n'avez pas obtenu de réponse
+            satisfaisante.
+          </p>
+          <p>Vous pouvez&nbsp;:</p>
+          <ul>
+            <li>
+              Écrire un message au
+              <a href="https://formulaire.defenseurdesdroits.fr/" class="fr-link">Défenseur des droits</a>
+            </li>
+            <li>
+              Contacter
+              <a href="https://www.defenseurdesdroits.fr/saisir/delegues" class="fr-link">le délégué du Défenseur des droits dans votre région</a>
+            </li>
+            <li>
+              Envoyer un courrier par la poste (gratuit, ne pas mettre de timbre)&nbsp;:<br>
+              Défenseur des droits<br>
+              Libre réponse 71120 75342 Paris CEDEX 07
+            </li>
+          </ul>
+        </section>
+
+        <hr class="fr-hr">
+
+        <p class="fr-text--sm">
+          Cette déclaration d'accessibilité a été créé le
+          <span>18 juin 2025</span>
+          grâce au
+          <a href="https://betagouv.github.io/a11y-generateur-declaration/#create" class="fr-link">Générateur de Déclaration d'Accessibilité</a>.
+        </p>
+      </article>
+    </div>
+  </div>
+
+  <script src="/dsfr-1.13.1.module.min.js"></script>
+</body>
+</html>
